--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>dsdsdddsdd</nav>
+
+    <main>
+        <div class="content">
+            
+        </div>
+    </main>
     
 </body>
 </html>
